cluster/infrastructure/frp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frp
  namespace: frp
spec:
  selector:
    app.kubernetes.io/name: frp
  ports:
    - name: http-vhost
      port: 8080
      targetPort: http-vhost
      protocol: TCP
    - name: ssh-gateway
      port: 2200
      targetPort: ssh-gateway
      protocol: TCP
  ipFamilyPolicy: SingleStack
  ipFamilies:
    - IPv6
