cluster/infrastructure/frp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frp-http
  namespace: frp
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`[a-z0-9](?:[a-z0-9-]{0,61}[a-z0-9])?\.proxy\.yadunut\.dev`) && !Host(`tunnel.proxy.yadunut.dev`)
      kind: Rule
      middlewares:
        - name: frp-rate-limit
        - name: frp-in-flight
      services:
        - name: frp
          port: http-vhost
          passHostHeader: true
  tls:
    secretName: frp-tls
