cluster/infrastructure/frp/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: frp-ssh
  namespace: frp
spec:
  entryPoints:
    - frp-ssh
  routes:
    - match: HostSNI(`*`)
      services:
        - name: frp
          port: ssh-gateway
